[Mac] Replace embedded NULs in event description when creating crash key

Bug: 826908
Change-Id: Ib160f35ef61043183e769a5b57f0988bc383241a
Reviewed-on: https://chromium-review.googlesource.com/985077
Reviewed-by: Mark Mentovai <mark@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546623}
Former-commit-id: b38b410255a52fd1bceda29a680de3e52857b091